--- a/assets/stylesheets/welcome.sass
+++ b/assets/stylesheets/welcome.sass
@@ -24,32 +24,37 @@
         left: 0
       &:after
         right: 0
-  .first_message
-    background: -webkit-linear-gradient(20deg, $red_color, $yellow_color)
-    -webkit-background-clip: text
-    -webkit-text-fill-color: transparent
-    font-size: calc(4em - 3vw)
-    @media screen and (min-width: 769px)
-      font-size: 5.5em
-    font-weight: 200
-    width: 90%
-    margin: 0 auto
-    margin-top: 50px
-    text-align: center
   .first_view
     max-width: 1120px
-    margin: auto
-    .svg_wrapper
-      position: relative
-      width: 100%
-      padding-top: calc(500 / 1200 * 100%)
-      svg
-        display: block
-        position: absolute
-        top: 0
-        left: 0
-        width: 100%
-        height: 100%
+    margin: 5rem 0 8rem
+    .first_message
+      background: -webkit-linear-gradient(20deg, $red_color, $yellow_color)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+      font-size: calc(4em - 3vw)
+      font-family: serif
+      @media screen and (min-width: 769px)
+        font-size: 5.5em
+      font-weight: 200
+      // width: 90%
+      margin: 0 auto
+      margin-top: 50px
+      text-align: center
+    h1
+      margin-top: 0
+  // .first_view
+  //   margin: auto
+  //   .svg_wrapper
+  //     position: relative
+  //     width: 100%
+  //     padding-top: calc(500 / 1200 * 100%)
+  //     svg
+  //       display: block
+  //       position: absolute
+  //       top: 0
+  //       left: 0
+  //       width: 100%
+  //       height: 100%
 
 section
   width: 85vw
