--- a/assets/stylesheets/article.sass
+++ b/assets/stylesheets/article.sass
@@ -4,3 +4,5 @@ article
       margin: 0 0 0 2rem
       margin-bottom: 0
       list-style: circle
+  img
+    filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.25))
