--- a/assets/stylesheets/article.sass
+++ b/assets/stylesheets/article.sass
@@ -6,3 +6,7 @@ article
       list-style: circle
   img
     filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.25))
+
+.related
+  h3
+    border-bottom: 1px dotted #c5c5c5
