--- a/assets/stylesheets/article.sass
+++ b/assets/stylesheets/article.sass
@@ -1,11 +1,20 @@
 article
+  h2
+    font-size: 1.6rem
+    font-weight: bold;
+    border-bottom: 1px dashed #e4e4e4;
+  ol
+    margin-bottom: 2rem
   ul
+    margin-bottom: 2rem
     li
       margin: 0 0 0 2rem
       margin-bottom: 0
-      list-style: circle
+      list-style: disc
   img
     filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.25))
+  pre
+    margin-bottom: 2rem
 
 .related
   h3
