--- a/assets/stylesheets/article.sass
+++ b/assets/stylesheets/article.sass
@@ -1,21 +1,26 @@
+$article_block_margin: 4rem
+
 article
+  h1, h2, h3, h4, h5, p, div, ul, ol, .highlight:not(:last-child)
+    margin-bottom: $article_block_margin
+  & > pre
+    margin-bottom: $article_block_margin
   h2
     font-size: 1.6rem
-    font-weight: bold;
-    border-bottom: 1px dashed #e4e4e4;
-  ol
-    margin-bottom: 2rem
+    font-weight: bold
+    border-bottom: 1px dashed #e4e4e4
+  p
+    line-height: 2rem
+    & > code
+      color: #63c3a6
+      padding: .15em .5e
   ul
-    margin-bottom: 2rem
     li
       margin: 0 0 0 2rem
-      margin-bottom: 0
       list-style: disc
   img
     filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.25))
-  pre
-    margin-bottom: 2rem
-
+m
 .related
   h3
     border-bottom: 1px dotted #c5c5c5
