--- a/assets/stylesheets/single.sass
+++ b/assets/stylesheets/single.sass
@@ -6,18 +6,17 @@
   nav
     display: flex
     flex-wrap: wrap
-    div
+    margin-bottom: 4rem
+    span
       margin-right: 1rem
     .category_list, .tag_list
       a
         color: lighten($link_color, 7%)
         font-weight: bold
     .tag_list
-  h1, h2, h3, h4, h5, h6, p, nav
-    margin-bottom: 2rem
   .title
     font-size: 2rem
-    margin: 2rem 0
+    margin: 2rem 0 0.8rem
   p
     font-size: 18px
   
