--- a/layouts/section/about.html
+++ b/layouts/section/about.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
-<article class="single">
-  <div class="about columns">
+<div class="single">
+  <div class="about">
   {{ .Content }}
   </div>
-  </article>
+</div>
 {{ end }}
