--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,6 +16,19 @@
     </div>
     {{ partial "footer.html" . }}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.0.1/instantclick.js" data-no-instant></script>
-    <script data-no-instant>InstantClick.init();</script>
+    <script data-no-instant>
+      (function(i,s,o,g,r,a,m){
+        i['GoogleAnalyticsObject']=r;
+        i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments);},i[r].l=1*new Date();
+        a=s.createElement(o),m=s.getElementsByTagName(o)[0],a.async=1,a.src=g;
+        m.parentNode.insertBefore(a,m);
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-81454048-3', 'auto');
+      InstantClick.on('change', function () {
+        ga('send', 'pageview', location.pathname + location.search);
+      });
+
+      InstantClick.init();
+    </script>
   </body>
 </html>
