--- a/assets/stylesheets/single.sass
+++ b/assets/stylesheets/single.sass
@@ -3,7 +3,7 @@
   margin: 0 auto
   width: 100%
   max-width: 800px
-  nav
+  div#post_meta_data
     display: flex
     flex-wrap: wrap
     margin-bottom: 4rem
