--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar is-transparent">
+  <div class="navbar is-transparent">
     <div class="navbar-brand">
       <div class="logo" class="navbar-item">
         <a href="/">
@@ -32,5 +32,5 @@
         </div>
       </div>
     </div>
-  </nav>
+  </div>
 </header>
