--- a/assets/stylesheets/variables.sass
+++ b/assets/stylesheets/variables.sass
@@ -10,48 +10,9 @@ $brand_grad: linear-gradient(20deg, $brand_color, adjust-hue($brand_color, 20%))
 
 $link_color: #3c75ff
 
-=background-gradation($angle: 20deg, $color-a: $brand_color, $color-b: 20%)
-  background: linear-gradient($angle, $color-a, $color-b)
-
 $pc_width: 1120px
 $tablet_width: 768px
 $smartphone_width: 414px
 
-a
-  color: $link_color
-
-// PC
-// @media screen and (min-width: $tablet_width + 1px)
-// Tablet
-// @media only screen and (min-width: $smartphone_width + 1px) and (max-width: $tablet_width)
-// Smartphone
-// @media screen and (max-width: $smartphone_width)
-
-@keyframes transparent
-  100%
-    opacity: 1
-
-=fadein($time)
-  opacity: 0
-  animation: transparent 0.5s ease $time 1 forwards
-
-.main_container
-  display: inherit
-  margin: 0 auto
-  padding: 0 20px
-  width: 100%
-  max-width: $pc_width
-
-.stretched-link::after
-  position: absolute
-  top: 0
-  right: 0
-  bottom: 0
-  left: 0
-  z-index: 1
-  pointer-events: auto
-  content: ""
-  background-color: rgba(0,0,0,0)
-
-nav
-  display: none
+$base_font_family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", YuGothic, "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif
+$base_font_size: 20px
