--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -2,7 +2,8 @@
 <div id="welcome">
   <div class="first_view">
     <p class="first_message">{{ .Site.Title }}</p>
-    <h1>愛知県豊橋市でWEB開発・ホームページ制作をしている<a href="/about">@t4traw</a>のブログです :)</h1>
+    <h1>愛知県東三河でWEB開発・ホームページ制作をしている<a href="/about">@t4traw</a>のブログです</h1>
+    <h2>技術相談・制作依頼は気軽に<a href="/contact">お問い合わせページからどうぞ</a> :)</h2>
   </div>
   <div id="posts">
     <div class="columns is-multiline">
