--- a/assets/stylesheets/index.css.sass
+++ b/assets/stylesheets/index.css.sass
@@ -1,6 +1,7 @@
 @import 'node_modules/bulma/bulma'
 @import 'node_modules/animate.css/animate.min'
 @import 'variables'
+@import 'scaffold'
 @import 'custom'
 @import 'syntax'
 @import 'header'
