--- a/assets/stylesheets/welcome.sass
+++ b/assets/stylesheets/welcome.sass
@@ -1,29 +1,8 @@
 #welcome
-  h1
+  h1, h2
     padding: 10px
-    margin: 60px 0
+    margin: 0
     text-align: center
-    font-size: 120%
-  .h2_wrap
-    text-align: center
-    h2
-      position: relative
-      display: inline-block
-      padding: 0 45px
-      margin: 60px 0
-      &:before, &:after
-        content: ''
-        position: absolute
-        top: 50%
-        display: inline-block
-        width: 44px
-        height: 1px
-        background-color: #b6babb
-        transform: rotate(-60deg)
-      &:before
-        left: 0
-      &:after
-        right: 0
   .first_view
     max-width: 1120px
     margin: 5rem 0 8rem
@@ -34,27 +13,12 @@
       font-size: calc(4em - 3vw)
       font-family: serif
       @media screen and (min-width: 769px)
-        font-size: 5.5em
+        font-size: 3.6em
       font-weight: 200
       // width: 90%
       margin: 0 auto
       margin-top: 50px
       text-align: center
-    h1
-      margin-top: 0
-  // .first_view
-  //   margin: auto
-  //   .svg_wrapper
-  //     position: relative
-  //     width: 100%
-  //     padding-top: calc(500 / 1200 * 100%)
-  //     svg
-  //       display: block
-  //       position: absolute
-  //       top: 0
-  //       left: 0
-  //       width: 100%
-  //       height: 100%
 
 section
   width: 85vw
