--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -8,7 +8,7 @@
 
   {{ if or (.Paginator.HasPrev) (.Paginator.HasNext) }}
   <div id="pagination">
-    <nav role="pagination">
+    <nav class="page_list_pagination" role="pagination">
       {{ if .Paginator.HasPrev }}
       <a href="{{ .Paginator.Prev.URL }}" class="stretched-link">前のページ</a>
       {{ end }}
