--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -19,6 +19,13 @@
     <meta name="twitter:site" content="@t4traw" />
     <meta name="twitter:creator" content="@t4traw" /> 
     {{ "<!-- ソースコードの中で気になったものがあったら@t4trawに聞いてください！お友達になりましょう！ -->" | safeHTML }}
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-9655104426658603",
+        enable_page_level_ads: true
+      });
+    </script>
   </head>
   <body>
     {{ partial "header.html" . }}
