Imageが小文字になっていたので修正

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,7 +12,7 @@
     <meta name="twitter:card" content="summary" />
     <meta name="og:title" content="{{ .Title }}" />
     <meta name="og:description" content="{{ if .IsPage }}{{ .Summary }}{{ else }}{{ .Site.Params.description }}{{ end }}" />
-    <meta name="og:image" content="{{ .Site.BaseURL }}{{ .Params.image }}" />
+    <meta name="og:image" content="{{ .Params.Image }}" />
     <meta name="twitter:url" content="{{ .Permalink }}" />
     <meta name="twitter:site" content="@t4traw" />
     <meta name="twitter:creator" content="@t4traw" /> 
