--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,6 +16,48 @@
     <meta name="twitter:url" content="{{ .Permalink }}" />
     <meta name="twitter:site" content="@t4traw" />
     <meta name="twitter:creator" content="@t4traw" /> 
+    <meta name="msapplication-TileColor" content="#2d88ef">
+    <meta name="msapplication-TileImage" content="{{ .Site.BaseURL }}/favicon/mstile-144x144.png">
+    <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="{{ .Site.BaseURL }}/favicon/favicon.ico">
+    <link rel="icon" type="image/vnd.microsoft.icon" href="{{ .Site.BaseURL }}/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="57x57" href="{{ .Site.BaseURL }}/favicon/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="{{ .Site.BaseURL }}/favicon/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="{{ .Site.BaseURL }}/favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="{{ .Site.BaseURL }}/favicon/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="{{ .Site.BaseURL }}/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="{{ .Site.BaseURL }}/favicon/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="{{ .Site.BaseURL }}/favicon/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="{{ .Site.BaseURL }}/favicon/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ .Site.BaseURL }}/favicon/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="36x36" href="{{ .Site.BaseURL }}/favicon/android-chrome-36x36.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="{{ .Site.BaseURL }}/favicon/android-chrome-48x48.png">
+    <link rel="icon" type="image/png" sizes="72x72" href="{{ .Site.BaseURL }}/favicon/android-chrome-72x72.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="{{ .Site.BaseURL }}/favicon/android-chrome-96x96.png">
+    <link rel="icon" type="image/png" sizes="128x128" href="{{ .Site.BaseURL }}/favicon/android-chrome-128x128.png">
+    <link rel="icon" type="image/png" sizes="144x144" href="{{ .Site.BaseURL }}/favicon/android-chrome-144x144.png">
+    <link rel="icon" type="image/png" sizes="152x152" href="{{ .Site.BaseURL }}/favicon/android-chrome-152x152.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="{{ .Site.BaseURL }}/favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="{{ .Site.BaseURL }}/favicon/android-chrome-256x256.png">
+    <link rel="icon" type="image/png" sizes="384x384" href="{{ .Site.BaseURL }}/favicon/android-chrome-384x384.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="{{ .Site.BaseURL }}/favicon/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="36x36" href="{{ .Site.BaseURL }}/favicon/icon-36x36.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="{{ .Site.BaseURL }}/favicon/icon-48x48.png">
+    <link rel="icon" type="image/png" sizes="72x72" href="{{ .Site.BaseURL }}/favicon/icon-72x72.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="{{ .Site.BaseURL }}/favicon/icon-96x96.png">
+    <link rel="icon" type="image/png" sizes="128x128" href="{{ .Site.BaseURL }}/favicon/icon-128x128.png">
+    <link rel="icon" type="image/png" sizes="144x144" href="{{ .Site.BaseURL }}/favicon/icon-144x144.png">
+    <link rel="icon" type="image/png" sizes="152x152" href="{{ .Site.BaseURL }}/favicon/icon-152x152.png">
+    <link rel="icon" type="image/png" sizes="160x160" href="{{ .Site.BaseURL }}/favicon/icon-160x160.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="{{ .Site.BaseURL }}/favicon/icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="196x196" href="{{ .Site.BaseURL }}/favicon/icon-196x196.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="{{ .Site.BaseURL }}/favicon/icon-256x256.png">
+    <link rel="icon" type="image/png" sizes="384x384" href="{{ .Site.BaseURL }}/favicon/icon-384x384.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="{{ .Site.BaseURL }}/favicon/icon-512x512.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ .Site.BaseURL }}/favicon/icon-16x16.png">
+    <link rel="icon" type="image/png" sizes="24x24" href="{{ .Site.BaseURL }}/favicon/icon-24x24.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ .Site.BaseURL }}/favicon/icon-32x32.png">
+    <link rel="manifest" href="{{ .Site.BaseURL }}/favicon/manifest.json">
+
     {{ "<!-- ソースコードの中で気になったものがあったら@t4trawに聞いてください！お友達になりましょう！ -->" | safeHTML }}
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
