初期費用に関する記事書いた

--- a/assets/stylesheets/article.sass
+++ b/assets/stylesheets/article.sass
@@ -1,7 +1,7 @@
 $article_block_margin: 4rem
 
 article
-  h1, h2, h3, h4, h5, p, div, .highlight:not(:last-child)
+  h1, h2, h3, h4, h5, p, div, table, .highlight:not(:last-child)
     margin-bottom: $article_block_margin
   & > pre, ul, ol
     margin-bottom: $article_block_margin
@@ -9,6 +9,10 @@ article
     font-size: 1.6rem
     font-weight: bold
     border-bottom: 1px dashed #e4e4e4
+  h3
+    font-size: 1.4rem
+    font-weight: bold
+    border-bottom: 1px dotted #e4e4e4
   p
     line-height: 2rem
     & > code
