デザイン修正

--- a/assets/stylesheets/article.sass
+++ b/assets/stylesheets/article.sass
@@ -1,7 +1,7 @@
 $article_block_margin: 4rem
 
 article
-  h1, h2, h3, h4, h5, p, div, table, .highlight:not(:last-child)
+  h1, h2, h3, h4, h5, p, div, table, iframe, .highlight:not(:last-child)
     margin-bottom: $article_block_margin
   & > pre, ul, ol
     margin-bottom: $article_block_margin
