--- a/assets/stylesheets/index.css.sass
+++ b/assets/stylesheets/index.css.sass
@@ -1,8 +1,8 @@
+@import 'variables'
+@import 'bulma'
 @import 'node_modules/bulma/bulma'
 @import 'node_modules/animate.css/animate.min'
-@import 'variables'
 @import 'scaffold'
-@import 'custom'
 @import 'syntax'
 @import 'header'
 @import 'footer'
