iframeがページ幅を飛び出すのでスタイルを追加

--- a/assets/stylesheets/article.sass
+++ b/assets/stylesheets/article.sass
@@ -28,6 +28,8 @@ article
       list-style: disc
   img
     filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.25))
+  iframe
+    width: 100%
 .related
   h3
     border-bottom: 1px dotted #c5c5c5
