ページネーションのリンクがおかしかったので修正

--- a/assets/stylesheets/scaffold.sass
+++ b/assets/stylesheets/scaffold.sass
@@ -47,7 +47,7 @@ a
   box-sizing: border-box
 
 .stretched-link::after
-  position: absolute
+  // position: absolute
   top: 0
   right: 0
   bottom: 0
