footerのせいでレイアウトがずれるので修正

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,11 +1,7 @@
-<footer>
+<footer class="footer">
   <div class="container">
     <div class="columns">
-      <div class="column">
-        <ul>
-          <li>foobar</li>
-        </ul>
-      </div>
+      <div class="column"></div>
       <div class="column"></div>
       <div class="column"></div>
     </div>
