--- a/assets/stylesheets/article.sass
+++ b/assets/stylesheets/article.sass
@@ -1,7 +1,7 @@
 $article_block_margin: 4rem
 
 article
-  h1, h2, h3, h4, h5, p, div, table, iframe, .highlight:not(:last-child)
+  h1, h2, h3, h4, h5, p, div, table, iframe, blockquote, .highlight:not(:last-child)
     margin-bottom: $article_block_margin
   & > pre, ul, ol
     margin-bottom: $article_block_margin
@@ -30,6 +30,34 @@ article
     filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.25))
   iframe
     width: 100%
+  blockquote
+    position: relative
+    padding: 10px 15px 10px 60px
+    box-sizing: border-box
+    font-style: italic
+    background: #bbbbbb
+    color: #555
+    &:before
+      display: inline-block
+      position: absolute
+      top: 18px
+      left: 15px
+      vertical-align: middle
+      content: '"'
+      font-family: FontAwesome
+      color: #cfcfcf
+      font-size: 60px
+      line-height: 1
+      font-weight: 900
+    p
+      padding: 0
+      margin: 10px 0
+      line-height: 1.7
+    cite
+      display: block
+      text-align: right
+      color: #888888
+      font-size: 0.9em
 .related
   h3
     border-bottom: 1px dotted #c5c5c5
