引用のカラーリング変更

--- a/assets/stylesheets/article.sass
+++ b/assets/stylesheets/article.sass
@@ -35,7 +35,7 @@ article
     padding: 10px 15px 10px 60px
     box-sizing: border-box
     font-style: italic
-    background: #bbbbbb
+    background: #f3f1ef
     color: #555
     &:before
       display: inline-block
