ファイル名はdivにclass名をつける方法に変更

--- a/assets/stylesheets/article.sass
+++ b/assets/stylesheets/article.sass
@@ -58,6 +58,14 @@ article
       text-align: right
       color: #888888
       font-size: 0.9em
+  .filename
+    margin: 0
+    padding: 0 10px
+    font-size: 100%
+    font-weight: bold
+    color: #464646
+    background-color: #f8f8f8
+    display: inline-block
 .related
   h3
     border-bottom: 1px dotted #c5c5c5
