記事の幅を650pxに変更してみる

--- a/assets/stylesheets/article.sass
+++ b/assets/stylesheets/article.sass
@@ -1,5 +1,9 @@
 $article_block_margin: 4rem
 
+.article
+  max-width: 650px
+  margin: 0 auto
+
 article
   h1, h2, h3, h4, h5, p, div, table, iframe, blockquote, .highlight:not(:last-child)
     margin-bottom: $article_block_margin
