--- a/assets/stylesheets/flight.scss
+++ b/assets/stylesheets/flight.scss
@@ -1,11 +1,29 @@
 @keyframes bg-color {
-  0% { background-color: #749fff; }
-  20% { background-color: #44b6ff; }
-  40% { background-color: #ffd41d; }
-  60% { background-color: #ff967c; }
-  80% { background-color: #ba75ff; }
-  100% { background-color: #749fff; }
+  0% {
+    background-color: #749fff;
+  }
+
+  20% {
+    background-color: #44b6ff;
+  }
+
+  40% {
+    background-color: #ffd41d;
+  }
+
+  60% {
+    background-color: #ff967c;
+  }
+
+  80% {
+    background-color: #ba75ff;
+  }
+
+  100% {
+    background-color: #749fff;
+  }
 }
+
 .flight {
   background-color: #e74c3c;
   animation: bg-color 43s infinite;
@@ -33,22 +51,27 @@ svg {
  */
 /*Paper Plane: Container*/
 .plane-container {
+
   // PC
   @media screen and (min-width: $tablet_width + 1px) {
     width: 200px;
   }
+
   // Tablet
   @media only screen and (min-width: $smartphone_width + 1px) and (max-width: $tablet_width) {
     width: 150px;
   }
+
   // Smartphone
   @media screen and (max-width: $smartphone_width) {
     width: 100px;
   }
+
   margin: 0px auto 0px 65vw;
   z-index: 3;
 }
- /*Paper Plane: Image*/
+
+/*Paper Plane: Image*/
 .plane {
   width: 100%;
   height: 60px;
@@ -64,6 +87,7 @@ svg {
   0% {
     transform: translateY(0px);
   }
+
   100% {
     transform: translateY(60px);
   }
@@ -73,22 +97,28 @@ svg {
   animation-timing-function: ease-in-out;
   animation: paper-plane-soaring 4s forwards infinite;
 }
+
 @-webkit-keyframes paper-plane-soaring {
   0% {
     transform: rotate(0deg);
   }
+
   40% {
     transform: rotate(18deg);
   }
+
   50% {
     transform: rotate(15deg);
   }
+
   60% {
     transform: rotate(-10deg);
   }
+
   70% {
     transform: rotate(-10deg);
   }
+
   100% {
     transform: rotate(0deg);
   }
@@ -164,12 +194,15 @@ svg {
 .slow {
   animation-duration: 9.2s;
 }
+
 .slower {
   animation-duration: 11.2s;
 }
+
 .slowest {
   animation-duration: 13.5s;
 }
+
 .super-slow {
   animation-duration: 20.5s;
 }
@@ -179,13 +212,16 @@ svg {
     opacity: 0.1;
     transform: translateX(300px);
   }
+
   10% {
 
     opacity: 0.7;
   }
+
   90% {
     opacity: 0;
   }
+
   100% {
     opacity: 0;
     transform: translateX(-1000px);
