--- a/assets/stylesheets/article.scss
+++ b/assets/stylesheets/article.scss
@@ -1,16 +1,29 @@
 $article_block_margin: 4rem;
 
 .article {
-  max-width: 650px;
+  max-width: 600px;
   margin: 0 auto;
 }
 
 article {
-  h1, h2, h3, h4, h5, p, div, table, iframe, blockquote, .highlight:not(:last-child) {
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  p,
+  div,
+  table,
+  iframe,
+  blockquote,
+  .highlight:not(:last-child) {
     margin-bottom: $article_block_margin;
   }
 
-  & > pre, ul, ol {
+  &>pre,
+  ul,
+  ol {
     margin-bottom: $article_block_margin;
   }
 
@@ -26,17 +39,27 @@ article {
     border-bottom: 1px dotted #e4e4e4;
   }
 
+  h4 {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+  }
+
   p {
     line-height: 2rem;
 
-    & > code {
+    &>code {
       color: #63c3a6;
       padding: 0.15em 0.5e;
     }
   }
 
-  ul, ol, li {
-    & > ul, ol {
+  ul,
+  ol,
+  li {
+
+    &>ul,
+    ol {
       margin-bottom: 0;
     }
 
