モルフォンGXデッキの記事かいた

--- a/assets/stylesheets/article.scss
+++ b/assets/stylesheets/article.scss
@@ -49,7 +49,7 @@ article {
     line-height: 2rem;
 
     &>code {
-      color: #63c3a6;
+      color: #777777;
       padding: 0.15em 0.5e;
     }
   }
