--- a/assets/stylesheets/article.scss
+++ b/assets/stylesheets/article.scss
@@ -76,6 +76,20 @@ article {
 
   img {
     filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.25));
+    display: block;
+  }
+
+  a {
+    img {
+      margin-bottom: 1rem;
+      filter: drop-shadow(0px 3px 4px rgba(41, 108, 255, 0.25));
+    }
+
+    &:hover {
+      img {
+        text-decoration: none;
+      }
+    }
   }
 
   iframe {
