記事部分のデザイン変更

--- a/assets/stylesheets/single.scss
+++ b/assets/stylesheets/single.scss
@@ -20,11 +20,10 @@
       }
     }
 
-    .tag_list {}
   }
 
   .title {
-    font-size: 2rem;
+    @include font-size(2rem);
     margin: 2rem 0 0.8rem;
   }
 }
