--- a/assets/stylesheets/article.scss
+++ b/assets/stylesheets/article.scss
@@ -1,4 +1,4 @@
-$article_block_margin: 4rem;
+$article_block_margin: 3rem;
 
 .article {
   max-width: 600px;
@@ -27,20 +27,26 @@ article {
     margin-bottom: $article_block_margin;
   }
 
+  h2, h3, h4 {
+    margin-top: 6rem;
+    margin-bottom: 2rem;
+  }
+
   h2 {
-    font-size: 1.6rem;
+    @include font-size(2rem);
     font-weight: bold;
-    border-bottom: 1px dashed #e4e4e4;
+    border-bottom: 1px dashed #bbbbbb;
+    padding: 8px 0;
   }
 
   h3 {
-    font-size: 1.4rem;
+    @include font-size(1.6rem);
     font-weight: bold;
     border-bottom: 1px dotted #e4e4e4;
   }
 
   h4 {
-    font-size: 1.2rem;
+    @include font-size(1.4rem);
     font-weight: bold;
     margin-bottom: 1rem;
   }
