--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,8 +5,7 @@
     <title>{{ block "title" . }}
       {{ .Site.Title }}
     {{ end }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <script src="{{ .Site.BaseURL }}{{ if eq (getenv "APP_ENV") "dev" }}bundle.js{{ else }}{{ index .Site.Data.manifest "bundle.js" | relURL }}{{ end }}"></script>{{ if .RSSLink }}
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">{{ if .RSSLink }}
     <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
     <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />{{ end }}
     <meta name="twitter:card" content="summary" />
@@ -73,20 +72,21 @@
       {{ block "main" . }}{{ end }}
     </div>
     {{ partial "footer.html" . }}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.0.1/instantclick.js" data-no-instant></script>
-    <script data-no-instant>
-      (function(i,s,o,g,r,a,m){
-        i['GoogleAnalyticsObject']=r;
-        i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments);},i[r].l=1*new Date();
-        a=s.createElement(o),m=s.getElementsByTagName(o)[0],a.async=1,a.src=g;
-        m.parentNode.insertBefore(a,m);
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-81454048-3', 'auto');
-      InstantClick.on('change', function () {
-        ga('send', 'pageview', location.pathname + location.search);
-      });
-
-      InstantClick.init();
-    </script>
   </body>
+  <script src="{{ .Site.BaseURL }}{{ if eq (getenv "APP_ENV") "dev" }}bundle.js{{ else }}{{ index .Site.Data.manifest "bundle.js" | relURL }}{{ end }}"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.0.1/instantclick.js" data-no-instant></script>
+  <script data-no-instant>
+    (function(i,s,o,g,r,a,m){
+      i['GoogleAnalyticsObject']=r;
+      i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments);},i[r].l=1*new Date();
+      a=s.createElement(o),m=s.getElementsByTagName(o)[0],a.async=1,a.src=g;
+      m.parentNode.insertBefore(a,m);
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-81454048-3', 'auto');
+    InstantClick.on('change', function () {
+      ga('send', 'pageview', location.pathname + location.search);
+    });
+
+    InstantClick.init();
+  </script>
 </html>
