画像をセンタリング

--- a/assets/stylesheets/article.scss
+++ b/assets/stylesheets/article.scss
@@ -83,6 +83,7 @@ article {
   img {
     filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.25));
     display: block;
+    margin: 0 auto;
   }
 
   a {
