関連記事を画像付きのカードスタイルに変更

--- a/layouts/_default/pagelist.html
+++ b/layouts/_default/pagelist.html
@@ -13,7 +13,7 @@
       <div class="card-content">
         <div class="media">
           <div class="media-content">
-            <p class="link title">{{ .Title }}</p>
+            <p class="link">{{ .Title }}</p>
           </div>
         </div>
         <div class="content">
