--- a/assets/stylesheets/welcome.scss
+++ b/assets/stylesheets/welcome.scss
@@ -1,5 +1,7 @@
 #welcome {
-  h1, h2 {
+
+  h1,
+  h2 {
     padding: 10px;
     margin: 0;
     text-align: center;
@@ -46,7 +48,8 @@ section {
       height: 150px;
       position: relative;
 
-      img {
+      img,
+      svg {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -62,16 +65,11 @@ section {
 
     .media {
       margin: 0;
-
-      .media-content {
-        .title {
-          font-size: 1.2rem;
-        }
-      }
     }
 
     .link {
       color: $link_color;
+      font-size: 1.2rem;
     }
 
     .content {
