--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -26,12 +26,12 @@
   {{ $related := .Site.RegularPages.Related . | first 10 }}
   {{ with $related }}
   <div class="related_links">
-    <h3>関連する記事</h3>
-    <ul>
+    <h3 class="title">こちらの記事もどうぞ 🤲</h3>
+    <div class="columns is-multiline">
       {{ range . }}
-      <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+        {{ .Render "pagelist" }}
       {{ end }}
-    </ul>
+    </div>
   </div>
   {{ end }}
 </div>
