ファイルをわかりやすく変更

--- a/assets/stylesheets/article.scss
+++ b/assets/stylesheets/article.scss
@@ -193,8 +193,8 @@ article {
     padding: 0 10px;
     font-size: 100%;
     font-weight: bold;
-    color: #464646;
-    background-color: #f8f8f8;
+    color: #f8f8f8;
+    background-color: #8a928d;
     display: inline-block;
   }
 }
