--- a/assets/stylesheets/variables.scss
+++ b/assets/stylesheets/variables.scss
@@ -3,7 +3,8 @@ $blue_color: #3FC6FF;
 $purple_color: #972AFF;
 $green_color: #17dbd6;
 $yellow_color: #fff254;
-$gray_color: #424242;
+$gray_color: #cccccb;
+$black_color: #424242;
 
 $brand_color: $blue_color;
 $brand_grad: linear-gradient(20deg, $brand_color, adjust-hue($brand_color, 20%));
