--- a/assets/stylesheets/variables.scss
+++ b/assets/stylesheets/variables.scss
@@ -15,5 +15,5 @@ $pc_width: 880px;
 $tablet_width: 620px;
 $smartphone_width: 414px;
 
-$base_font_family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", YuGothic, "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
+$base_font_family: "游明朝", YuMincho, "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", "ＭＳ 明朝", serif, "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $base_font_size: 20px;
