ひらがな化

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,17 +15,13 @@
 
     <div id="header_menu" class="navbar-menu">
       <div class="navbar-end">
-        <a class="navbar-item" href="/about">
-          About
-        </a>
-        <a class="navbar-item" href="/blog">
-          Blog
-        </a>
+        <a class="navbar-item" href="/about">かいてるひと</a>
+        <a class="navbar-item" href="/blog">ぶろぐ</a>
         <div class="navbar-item">
           <div class="field is-grouped">
             <p class="control">
               <a class="contact_button" href="/contact">
-                <span>Contact</span>
+                <span>おといあわせ</span>
               </a>
             </p>
           </div>
