--- a/assets/stylesheets/variables.scss
+++ b/assets/stylesheets/variables.scss
@@ -3,7 +3,7 @@ $pink_color: #ff8874;
 $blue_color: #3FC6FF;
 $purple_color: #972AFF;
 $green_color: #17dbd6;
-$yellow_color: #fff254;
+$yellow_color: #fff8c6;
 $gray_color: #cccccb;
 $black_color: #424242;
 
