--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -32,7 +32,7 @@
         <h1>愛知県東三河でWEB開発・ホームページ制作をしている<a href="/about">@t4traw</a>のブログです。</h1>
         <h2>技術相談・制作依頼は気軽に<a href="/contact">お問い合わせページからどうぞ</a> :)</h2>
       </section>
-      <section class="category">
+      <section class="categories">
         <h2 class="title">かてごりー</h2>
         <ul>
           {{ range $.Site.Taxonomies.categories.ByCount }}
