--- a/assets/stylesheets/about.scss
+++ b/assets/stylesheets/about.scss
@@ -1,8 +1,12 @@
 .about {
   margin-top: 100px;
 
-  h2.name {
+  h2 {
     margin-top: 0;
+  }
+
+  .title {
+    margin-bottom: 2rem;
   }
 
   .user_bio {
@@ -10,6 +14,8 @@
       text-align: left;
       padding: 0;
       font-size: 1rem;
+      border-bottom: 1px dashed $gray_color;
+      margin-bottom: 2rem;
 
       span {
         font-weight: bold;
