メインカラムの幅を指定

--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
-<div id="welcome">
+<div id="welcome" class="container">
   <div class="columns">
-    <div class="column">
+    <div class="column is-9">
       <div class="ads">
         <!-- index_header -->
         <ins class="adsbygoogle"
