シンタックスハイライトのスタイル有効化・フォント変更

--- a/assets/stylesheets/article.scss
+++ b/assets/stylesheets/article.scss
@@ -196,6 +196,7 @@ article {
     color: #f8f8f8;
     background-color: #8a928d;
     display: inline-block;
+    font-family: monospace;
   }
 }
 
