aboutページとプロフィール画像の修正

--- a/assets/stylesheets/welcome.scss
+++ b/assets/stylesheets/welcome.scss
@@ -175,8 +175,6 @@
   .as_light_as {
     margin-top: 30px;
   }
-
-  .slide {}
 }
 
 #posts {
@@ -184,4 +182,8 @@
     text-align: center;
     display: block;
   }
+}
+
+.side_prof_img {
+  margin: 40px 0 10px;
 }
