--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -26,7 +26,8 @@
     <div class="column is-3 sidebar">
       <section class="profile">
         <h2 class="title">かいているひと</h2>
-        <div class="user_image">
+        <div class="user_image side_prof_img">
+          <p id="lets_be_friends">おともだちになりましょう！</p>
           <img class="user" src="https://avatars1.githubusercontent.com/u/6788936?v=4">
         </div>
         <h1>愛知県東三河でWEB開発・ホームページ制作をしている<a href="/about">@t4traw</a>のブログです。</h1>
