リンクカラー変更

--- a/assets/stylesheets/variables.scss
+++ b/assets/stylesheets/variables.scss
@@ -10,7 +10,7 @@ $black_color: #424242;
 $brand_color: $blue_color;
 $brand_grad: linear-gradient(20deg, $brand_color, adjust-hue($brand_color, 20%));
 
-$link_color: #3c75ff;
+$link_color: #285dff;
 
 $pc_width: 1280px;
 $tablet_width: 620px;
