--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer is-tag">
+<footer class="footer is-inline-block">
   <div class="container">
     <h2 class="title">きーわーど</h2>
     <ul>
@@ -13,12 +13,15 @@
   <div class="container">
     <div class="columns">
       <div class="column is-archive">
-        <h2 class="title">あーかいぶ</h2>
-        <ul>
-          {{ range $.Site.Taxonomies.archives.Alphabetical.Reverse }}
-            <li><a href="{{ $.Site.BaseURL }}archives/{{ .Name | urlize | lower }}">{{ .Name }}</a></li>
-          {{ end }}
-        </ul>
+        <h2 class="title">おすすめ</h2>
+        <ol>
+          <li><a href="/blog/2018/01/2018年1月31日現在のminecraftpeサーバーの建て方/">2018年1月31日現在のminecraftpeサーバーの建て方</a></li>
+          <li><a href="/blog/2019/03/gxスタートデッキ-メタグロスを強くする/">gxスタートデッキ-メタグロスを強くする</a></li>
+          <li><a href="/blog/2019/03/electronでアプリケーションを一つ作った時のメモ/">electronでアプリケーションを一つ作った時のメモ</a></li>
+          <li><a href="/blog/2019/04/ターミナルをiterm2からhyperに変更しました/">ターミナルをiterm2からhyperに変更しました</a></li>
+          <li><a href="/blog/2018/12/java-siluro2-2018を購入ついにロードバイク乗りになりました/">java-siluro2-2018を購入ついにロードバイク乗りになりました</a></li>
+          <li><a href="/blog/2019/08/夏休み豪華版ガルーラタッグバトル再度参加しました/">夏休み豪華版ガルーラタッグバトル再度参加しました</a></li>
+        </ol>
       </div>
       <div class="column">
         <h2 class="title">ぺーじ</h2>
