--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -37,7 +37,7 @@
         <h2 class="title">かてごりー</h2>
         <ul>
           {{ range $.Site.Taxonomies.categories.ByCount }}
-            <li><a href="{{ $.Site.BaseURL }}categories/{{ .Name | urlize | lower }}">{{ .Name }}</a></li>
+            <li><a href="{{ $.Site.BaseURL }}/categories/{{ .Name | urlize | lower }}">{{ .Name }}</a></li>
           {{ end }}
         </ul>
       </section>
