--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,7 +3,7 @@
 <div class="single">
   <article class="article">
     {{ if .Params.Image }}
-      <img src="{{ .Params.Image }}">
+      <img src="{{ $.Site.BaseURL }}/images/{{ .Params.Image }}">
     {{ else }}
       {{ partial "blank.svg" .}}
     {{ end }}
