rootへのリンクはno-instantにするよう変更

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <div class="navbar is-transparent">
     <div class="navbar-brand">
       <div class="logo" class="navbar-item">
-        <a href="/">{{ partial "logo.svg" .}}</a>
+        <a href="/" data-no-instant>{{ partial "logo.svg" .}}</a>
       </div>
       <div class="navbar-burger burger" onclick="toggle_menu(this)" data-target="header_menu">
         <span></span>
