amazonのリンクを修正

--- a/assets/stylesheets/amazfy.scss
+++ b/assets/stylesheets/amazfy.scss
@@ -1,9 +1,9 @@
 .amazfy {
+  text-align: center;
   a {
     img {
-      width: 250px;
       filter: none;
-      margin: 0;
+      margin: 0 auto;
     }
   }
 }
