--- a/assets/stylesheets/variables.scss
+++ b/assets/stylesheets/variables.scss
@@ -1,7 +1,7 @@
 $red_color: #ff5746;
 $pink_color: #ff8874;
-$blue_color: #3FC6FF;
-$purple_color: #972AFF;
+$blue_color: #3fc6ff;
+$purple_color: #972aff;
 $green_color: #17dbd6;
 $yellow_color: #fff8c6;
 $gray_color: #cccccb;
@@ -16,5 +16,4 @@ $pc_width: 1280px;
 $tablet_width: 620px;
 $smartphone_width: 414px;
 
-$base_font_family: "游明朝", YuMincho, "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", "ＭＳ 明朝", serif, "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $base_font_size: 20px;
